feat: refinamento do projeto